[package]
name = "pyo3_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_example"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "^0.21"
polars = "0.44.2"
polars-lazy =  "0.44.2"
polars-core =  "0.44.2"
pyo3-polars = "0.18.0"